@@ -85,6 +85,8 @@ class Net::SSLeay {
   
   native method get0_next_proto_negotiated : void ($data_ref : string[], $len_ref : int*);
   
+  native method get0_alpn_selected : void ($data_ref : string[], $len_ref : int*);
+  
   # This native function is not documented in OpenSSL, but Perl's IO::Socket::SSL uses this method
   native method set_SSL_CTX : Net::SSLeay::SSL_CTX ($ctx : Net::SSLeay::SSL_CTX);
   
